--- a/action.yaml
+++ b/action.yaml
@@ -30,6 +30,7 @@ runs:
   steps:
     - name: Validate data
       run: |
+        "Validate data"
         BRANCH_NAME="${{ inputs.branch-name }}"
         UPDATE_ERROR=false
         if [[ "$BRANCH_NAME" != "dev" && "$BRANCH_NAME" != "staging" && "$BRANCH_NAME" != "master" && "$BRANCH_NAME" != "main" ]]; then
