--- a/action.yaml
+++ b/action.yaml
@@ -22,7 +22,7 @@ inputs:
     description: 'GiHub token with permission to write in protective branches'
     required: true
   branch-name:
-    description: Branch name
+    description: 'Name of the branch for which this workflow will run, valid values are: dev | staging | main | master'
     required: false
     default: 'dev'
 runs:
@@ -87,8 +87,8 @@ runs:
       if: env.UPDATED_TAG == 'true'
       run: |
         mv .git/config .git/config.temp
-        git config --global user.name 'argocd-image-updater'
-        git config --global user.email 'argocd-image-updater@users.noreply.github.com'
+        git config --global user.name '${{ github.actor }}'
+        git config --global user.email '${{ github.actor }}@users.noreply.github.com'
         git remote add origin https://github.com/${{ github.repository }}
         git config --global push.default current
         git remote set-url origin https://${{ inputs.token }}@github.com/${{ github.repository }}
