--- a/action.yaml
+++ b/action.yaml
@@ -87,8 +87,8 @@ runs:
       if: env.UPDATED_TAG == 'true'
       run: |
         mv .git/config .git/config.temp
-        git config --global user.name '${{ github.actor }}'
-        git config --global user.email '${{ github.actor }}@users.noreply.github.com'
+        git config --global user.name 'argocd-image-updater'
+        git config --global user.email 'argocd-image-updater@users.noreply.github.com'
         git remote add origin https://github.com/${{ github.repository }}
         git config --global push.default current
         git remote set-url origin https://${{ inputs.token }}@github.com/${{ github.repository }}
