--- a/action.yaml
+++ b/action.yaml
@@ -100,7 +100,7 @@ runs:
     - name: Commit status success
       if: ${{ (env.UPDATE_ERROR == 'false') && success() }}
       run: |
-        curl --request POST \
+        curl --silent --request POST \
         --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ env.COMMIT_ID }} \
         --header 'authorization: Bearer ${{ inputs.token }}' \
         --header 'content-type: application/json' \
@@ -114,7 +114,7 @@ runs:
     - name: Commit status failure
       if: ${{ (env.UPDATE_ERROR == 'false') && failure() }}
       run: |
-        curl --request POST \
+        curl --silent --request POST \
         --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ env.COMMIT_ID }} \
         --header 'authorization: Bearer ${{ inputs.token }}' \
         --header 'content-type: application/json' \
