--- a/action.yaml
+++ b/action.yaml
@@ -37,10 +37,7 @@ runs:
           exit 1
         fi
 
-        REF_NAME=$(echo ${{ github.ref_name}} | sed -e 's/^v//')
-        REF_NAME=$(printf ${REF_NAME} | tr -c '[[:alnum:]]._-' '_')
-        echo $REF_NAME
-
+        REF_NAME="${{ github.ref_name}}"
         if [[ "$BRANCH_NAME" != "$REF_NAME" ]]; then
           printf "\n Auto deployment will not run for current '$REF_NAME' branch as it's cofigured to run for '$BRANCH_NAME' branch only.\n"
           UPDATE_ERROR=true
