--- a/action.yaml
+++ b/action.yaml
@@ -97,31 +97,31 @@ runs:
         echo "COMMIT_ID=$(git rev-parse --verify HEAD)" >> $GITHUB_ENV
         mv .git/config.temp .git/config
       shell: bash
-    - name: Commit status success
-      if: ${{ (env.UPDATE_ERROR == 'false') && success() }}
-      run: |
-        curl --silent --request POST \
-        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ env.COMMIT_ID }} \
-        --header 'authorization: Bearer ${{ inputs.token }}' \
-        --header 'content-type: application/json' \
-        --data '{
-          "context": "ArgoCD image updated",
-          "state": "success",
-          "description": "ArgoCD image updater passed",
-          "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-        }' &> /dev/null
-      shell: bash
-    - name: Commit status failure
-      if: ${{ (env.UPDATE_ERROR == 'false') && failure() }}
-      run: |
-        curl --silent --request POST \
-        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ env.COMMIT_ID }} \
-        --header 'authorization: Bearer ${{ inputs.token }}' \
-        --header 'content-type: application/json' \
-        --data '{
-          "context": "ArgoCD image updater failed",
-          "state": "failure",
-          "description": "ArgoCD image updater failed",
-          "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-        }' &> /dev/null
-      shell: bash
+#    - name: Commit status success
+#      if: ${{ (env.UPDATE_ERROR == 'false') && success() }}
+#      run: |
+#        curl --silent --request POST \
+#        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ env.COMMIT_ID }} \
+#        --header 'authorization: Bearer ${{ inputs.token }}' \
+#        --header 'content-type: application/json' \
+#        --data '{
+#          "context": "ArgoCD image updated",
+#          "state": "success",
+#          "description": "ArgoCD image updater passed",
+#          "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+#        }' &> /dev/null
+#      shell: bash
+#    - name: Commit status failure
+#      if: ${{ (env.UPDATE_ERROR == 'false') && failure() }}
+#      run: |
+#        curl --silent --request POST \
+#        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ env.COMMIT_ID }} \
+#        --header 'authorization: Bearer ${{ inputs.token }}' \
+#        --header 'content-type: application/json' \
+#        --data '{
+#          "context": "ArgoCD image updater failed",
+#          "state": "failure",
+#          "description": "ArgoCD image updater failed",
+#          "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+#        }' &> /dev/null
+#      shell: bash
